# som-multimodal-datareduction

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  scheduled-scan.yml
data/: README.md  general_main.csv
docs/: PERF.md
docs/profiling/: flame_som_pipeline.collapsed.txt
scripts/: profile_som.py
som_multimodal/: __init__.py  analysis.py  config.py  io.py  pipeline.py  train.py  visualize.py
som_multimodal/_vendor/: README.md
som_multimodal/_vendor/sompy/: sompy.py
som_multimodal/_vendor/sompy/visualization/: bmuhits.py  hitmap.py  mapview.py
som_multimodal/engine/: ACKNOWLEDGMENTS.md  __init__.py  strings.py  tfprop_vis.py
tests/: conftest.py  test_config.py  test_data.py  test_engine.py  test_io.py  test_pipeline.py  test_train.py  test_version.py
